--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -6,35 +6,54 @@ body {
   margin: 0;
   background: #eee;
   font-family: Besley, serif;
+
+}
+
+.header .second {
+  display: flex;
+  justify-self: flex-end;
+  gap: 10px;
+  align-items: center;
+  flex-basis: auto;
 }
 
 .header {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: grid;
+  grid-template-columns: 140px 700px auto;
+  width: auto;
 }
 
-.profile-image {
+.header .profile-image {
   background: rebeccapurple;
   box-shadow: inset 2px 2px 4px rgba(0,0,0,.5);
   border-radius: 50%;
   width: 48px;
   height:  48px;
+  justify-self: end;
+  margin-right: 10px;
 }
 
-.logo {
+.header .logo {
   color: rebeccapurple;
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
+  justify-self: start;
+  padding-left: 20px;
+  flex-basis: content;
+  
 }
 
-button {
+.notifications {
   border: none;
   border-radius: 8px;
   background: rebeccapurple;
   color: white;
   padding: 8px 24px;
+  justify-self: end;
 }
 
 a {
@@ -45,4 +64,7 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  gap: 20px;
+  padding-left: 20px;
 }
