--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,5 +1,23 @@
 body {
+  width: 100%;
+  height: 100vh;
   font-family: 'Courier New', Courier, monospace;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  
+}
+body .content {
+  margin-top: 25px;
+  display: flex;
+  width: 50%;
+  height: 50%;
+  gap: 52px;
+}
+
+.content div {
+  text-align: center;
 }
 
 img {
