--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -1,24 +1,90 @@
+* {
+  padding: 0px;
+  margin: 0px;
+}
+
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
-  min-height: 100vh;
+  display: flex;
+  width: 100vw;
+  height: 100vh;
+  flex-direction: column;
 }
 
 .header {
-  height: 72px;
+  min-height: 72px;
+  max-height: 72px;
+  width: 100vw;
   background: darkmagenta;
   color: white;
+  display: flex;
+  align-items: center;
+  font-size: 1.6rem;
+  font-weight: 700;
+}
+
+.header p {
+  margin-left: 10px;
 }
 
 .footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  display: flex;
+  justify-content: center;
+
+}
+
+.footer div {
+  display: flex;
+  align-items: center;
 }
 
 .sidebar {
-  width: 300px;
+  min-width: 250px;
+
   background: royalblue;
+  display: flex;
+  flex-direction: column;
+
+}
+
+.sidebar div {
+  margin-top: 10px;
+}
+
+
+.sidebar a {
+  text-decoration: none;
+  color: white;
+  font-weight: 500;
+  font-size: 1.3rem;
+}
+
+.cards {
+  display: flex;
+  align-items: center;
+  min-width: vw;
+  flex: 1;
+  gap: 20px;
+  flex-wrap: wrap;
+}
+
+.cards div {
+  min-width: 300px;
+  display: flex;
+  justify-self: center;
+  min-height: 300px;
+  padding: 20px;
+  flex-basis: 250px;
+}
+
+.main {
+  display: flex;
+  flex: 1;
 }
 
 .card {
